--- a/sass/_keyframes.scss
+++ b/sass/_keyframes.scss
@@ -1,6 +1,7 @@
 @use "./variables" as*;
 
 
+/* ================== ANIMACIONES ================== */
 @keyframes pulse {
 	0%,100% {
 		transform: scale(1);
@@ -9,7 +10,6 @@
 		transform: scale(1.05);
 	}
 }
-/* Brillo */
 @keyframes glow {
 	0%,100% {
 		filter: drop-shadow(0 0 0px rgba(255, 200, 0, 0));
@@ -18,7 +18,6 @@
 		filter: drop-shadow(0 0 20px rgb(36, 180, 36));
 	}
 }
-
 @keyframes scroll-left {
 	from {
 		transform: translateX(0);
