--- a/css/estilos.css
+++ b/css/estilos.css
@@ -150,15 +150,17 @@ nav ul li a:hover {
 
 /******************************VIDEO**********************/
 .video-container {
-  width: 100%;
-  max-width: 100%;
-  margin: 0 auto;
   position: relative;
+  width: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 .video-container video {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   object-fit: cover;
   display: block;
 }
@@ -486,7 +488,16 @@ footer a img:hover {
     height: 22px;
   }
   .video-container {
-    height: 500px;
+    height: 70vh;
+    padding-top: 56.25%;
+  }
+  .video-container video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
   }
 }
 /*************************MEDIA QUERIES**********************/
@@ -523,7 +534,7 @@ footer a img:hover {
     height: 18px;
   }
   .video-container {
-    height: 50vh;
+    height: 60vh;
   }
   .garabato-contenido p {
     text-align: justify;
