--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -68,17 +68,20 @@ nav {
 
 /******************************VIDEO**********************/
 .video-container {
-	width: 100%;
-	max-width: 100%;
-	margin: 0 auto;
-	position: relative;
-	overflow: hidden;
-	video {
-		width: 100%;
-		height: 100vh;
-		object-fit: cover;
-		display: block;
-	}
+    position: relative;
+    width: 100%;
+    height: 100vh; // ocupa toda la pantalla en desktop
+    overflow: hidden;
+
+    video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; // mantiene el video lleno y centrado
+        display: block;
+    }
 }
 /***************************GARABATO**********************/
 .garabato {
@@ -403,10 +406,21 @@ footer {
 			}
 		}
 	}
-	.video-container {
-		height: 500px;
-	}
+	 .video-container {
+        height: 70vh;         
+        padding-top: 56.25%;
+    }
+
+    .video-container video {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        object-fit: cover; // sigue llenando el contenedor
+    }
 }
+
 
 /*************************MEDIA QUERIES**********************/
 
@@ -454,8 +468,9 @@ footer {
 			}
 		}
 	}
-	.video-container {
-		height: 50vh;
+	
+    .video-container {
+        height: 60vh;
 	}
 	.garabato-contenido {
 		p {
