ajustes proyectos, no funcionaban ciertos estilos al subirlo a github

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -15,3 +15,4 @@ $background-color_6: #e6e3daef;
 $background-color_7: transparent;
 $background-color_8: #000;
 $border-color_1: #000;
+$overlay-dark: rgba(0, 0, 0, 0.6);
