--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -70,7 +70,7 @@ nav {
 .video-container {
     position: relative;
     width: 100%;
-    height: 100vh; // ocupa toda la pantalla en desktop
+    height: 100vh; 
     overflow: hidden;
 
     video {
@@ -79,7 +79,7 @@ nav {
         left: 0;
         width: 100%;
         height: 100%;
-        object-fit: cover; // mantiene el video lleno y centrado
+        object-fit: cover;
         display: block;
     }
 }
@@ -424,7 +424,7 @@ footer {
         height: 100%;
         top: 0;
         left: 0;
-        object-fit: cover; // sigue llenando el contenedor
+        object-fit: cover; 
     }
 }
 
